--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#2DB8FF</color>
+    <color name="blue">#1BABFB</color>
     <color name="red">#FB4141</color>
-    <color name="gray">#8A8A8A</color>
+    <color name="gray">#D3D3D3</color>
 
 </resources>
